force-app/main/default/objects/Activity/fields/LXD_Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Clasificacion__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <inlineHelpText>Clasificación de la tarea</inlineHelpText>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LXD_Admon Vtas</fullName>
                <label>Admon Vtas</label>
            </value>
            <value>
                <fullName>LXD_Blue Telecomm Inalámbrico</fullName>
                <label>Blue Telecomm Inalámbrico</label>
            </value>
            <value>
                <fullName>LXD_BTCEL</fullName>
                <label>BTCEL</label>
            </value>
            <value>
                <fullName>LXD_BTI Combos (BT-Video)</fullName>
                <label>BTI Combos (BT-Video)</label>
            </value>
            <value>
                <fullName>LXD_Callidus</fullName>
                <label>Callidus</label>
            </value>
            <value>
                <fullName>LXD_CAS</fullName>
                <label>CAS</label>
            </value>
            <value>
                <fullName>LXD_Cierre de Ticket</fullName>
                <label>Cierre de Ticket</label>
            </value>
            <value>
                <fullName>LXD_Consulta Val Capa</fullName>
                <label>Consulta Val Capa</label>
            </value>
            <value>
                <fullName>LXD_Duda Comercial</fullName>
                <label>Duda Comercial</label>
            </value>
            <value>
                <fullName>LXD_Duda Técnica</fullName>
                <label>Duda Técnica</label>
            </value>
            <value>
                <fullName>LXD_EDICOM</fullName>
                <label>EDICOM</label>
            </value>
            <value>
                <fullName>LXD_Error 80</fullName>
                <label>Error 80</label>
            </value>
            <value>
                <fullName>LXD_Falla en IVR</fullName>
                <label>Falla en IVR</label>
            </value>
            <value>
                <fullName>LXD_HEAT</fullName>
                <label>HEAT</label>
            </value>
            <value>
                <fullName>LXD_Hi Jump</fullName>
                <label>Hi Jump</label>
            </value>
            <value>
                <fullName>LXD_Llamada de Prueba</fullName>
                <label>Llamada de Prueba</label>
            </value>
            <value>
                <fullName>LXD_Llamada de salida</fullName>
                <label>Llamada de salida</label>
            </value>
            <value>
                <fullName>LXD_Llamada sin voz</fullName>
                <label>Llamada sin voz</label>
            </value>
            <value>
                <fullName>LXD_Llamada Transferida</fullName>
                <label>Llamada Transferida</label>
            </value>
            <value>
                <fullName>LXD_LOGISTICA</fullName>
                <label>LOGISTICA</label>
            </value>
            <value>
                <fullName>LXD_Mesa de Reparaciones</fullName>
                <label>Mesa de Reparaciones</label>
            </value>
            <value>
                <fullName>LXD_Mesa de Validación</fullName>
                <label>Mesa de Validación</label>
            </value>
            <value>
                <fullName>LXD_News Letter y Comunicados</fullName>
                <label>News Letter y Comunicados</label>
            </value>
            <value>
                <fullName>LXD_NIG/Recuperador</fullName>
                <label>NIG/Recuperador</label>
            </value>
            <value>
                <fullName>LXD_NIT</fullName>
                <label>NIT</label>
            </value>
            <value>
                <fullName>LXD_NIV</fullName>
                <label>NIV</label>
            </value>
            <value>
                <fullName>LXD_OFSC</fullName>
                <label>OFSC</label>
            </value>
            <value>
                <fullName>LXD_Resultados de Cursos</fullName>
                <label>Resultados de Cursos</label>
            </value>
            <value>
                <fullName>LXD_SAP Commissions Ventas</fullName>
                <label>SAP Commissions Ventas</label>
            </value>
            <value>
                <fullName>LXD_SEC</fullName>
                <label>SEC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>