force-app/main/default/objects/Activity/fields/LXD_Correo_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>LXD_Correo_de_contacto__c</fullName>
    <label>Correo de contacto</label>
    <type>Email</type>
</CustomField>