force-app/main/default/objects/Activity/fields/LXD_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>LXD_Distribuidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distribuidor relacionado</description>
    <inlineHelpText>Distribuidor relacionado</inlineHelpText>
    <label>Distribuidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>