force-app/main/default/objects/Activity/fields/LXD_Duration__c.field-meta.xml
<CustomField>
    <fullName>LXD_Duration__c</fullName>
    <label>Duracion de la llamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>