force-app/main/default/objects/Activity/fields/LXD_Eic_AssignedWorkgroup__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_AssignedWorkgroup__c</fullName>
    <label>Grupo de Trabajo asignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>