force-app/main/default/objects/Activity/fields/LXD_Eic_CallId__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_CallId__c</fullName>
    <label>Id. de Llamada</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>