force-app/main/default/objects/Activity/fields/LXD_Eic_CallStateString__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_CallStateString__c</fullName>
    <label>State String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>