force-app/main/default/objects/Activity/fields/LXD_Eic_InitiatonTime__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_InitiatonTime__c</fullName>
    <label>Hora de inicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>