force-app/main/default/objects/Activity/fields/LXD_Eic_LineName__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_LineName__c</fullName>
    <label>Line Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>