force-app/main/default/objects/Activity/fields/LXD_Eic_RemoteAddress__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_RemoteAddress__c</fullName>
    <label>Remote Address</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>