force-app/main/default/objects/Activity/fields/LXD_Eic_RemoteName__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_RemoteName__c</fullName>
    <label>Remote Name</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>