force-app/main/default/objects/Activity/fields/LXD_Eic_StationName__c.field-meta.xml
<CustomField>
    <fullName>LXD_Eic_StationName__c</fullName>
    <label>Station Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>