force-app/main/default/objects/Activity/fields/LXD_Numero_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>LXD_Numero_de_contacto__c</fullName>
    <label>Número de contacto</label>
    <type>Phone</type>
</CustomField>