force-app/main/default/objects/Activity/fields/LXD_Subclasificacion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Subclasificacion__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Subclasificación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LXD_Clasificacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LXD_Consulta de estatus de Ditribución</fullName>
                <label>Consulta de estatus de Ditribución</label>
            </value>
            <value>
                <fullName>LXD_Estatus trámite SEC y HEAT prospecto DI</fullName>
                <label>Estatus trámite SEC y HEAT prospecto DI</label>
            </value>
            <value>
                <fullName>LXD_Activación de Módem SPBT</fullName>
                <label>Activación de Módem SPBT</label>
            </value>
            <value>
                <fullName>LXD_Comercial (Precios y/o Paquetes) SPBT</fullName>
                <label>Comercial (Precios y/o Paquetes) SPBT</label>
            </value>
            <value>
                <fullName>LXD_Módem sin Señal</fullName>
                <label>Módem sin Señal</label>
            </value>
            <value>
                <fullName>LXD_Trasferencia de Saldo</fullName>
                <label>Trasferencia de Saldo</label>
            </value>
            <value>
                <fullName>LXD_Comercial (Precios y/o Paquetes)</fullName>
                <label>Comercial (Precios y/o Paquetes)</label>
            </value>
            <value>
                <fullName>LXD_Duda en activación BTCEL</fullName>
                <label>Duda en activación BTCEL</label>
            </value>
            <value>
                <fullName>LXD_Duda Prospección BTCEL</fullName>
                <label>Duda Prospección BTCEL</label>
            </value>
            <value>
                <fullName>LXD_Activacion de Módem Combo</fullName>
                <label>Activacion de Módem Combo</label>
            </value>
            <value>
                <fullName>LXD_Comercial (Precios y/o Paquetes) Combo</fullName>
                <label>Comercial (Precios y/o Paquetes) Combo</label>
            </value>
            <value>
                <fullName>LXD_Módem sin Señal Combos</fullName>
                <label>Módem sin Señal Combos</label>
            </value>
            <value>
                <fullName>LXD_Duda Operativa Callidus</fullName>
                <label>Duda Operativa Callidus</label>
            </value>
            <value>
                <fullName>LXD_Entrega de Clave de Acceso Callidus</fullName>
                <label>Entrega de Clave de Acceso Callidus</label>
            </value>
            <value>
                <fullName>LXD_Error de Acceso Callidus</fullName>
                <label>Error de Acceso Callidus</label>
            </value>
            <value>
                <fullName>LXD_Falla en Sistema Callidus</fullName>
                <label>Falla en Sistema Callidus</label>
            </value>
            <value>
                <fullName>LXD_OT o SS no reflejados en Sistema</fullName>
                <label>OT o SS no reflejados en Sistema</label>
            </value>
            <value>
                <fullName>LXD_Canalización con Soporte Administrativo</fullName>
                <label>Canalización con Soporte Administrativo</label>
            </value>
            <value>
                <fullName>LXD_Problemas de acceso</fullName>
                <label>Problemas de acceso</label>
            </value>
            <value>
                <fullName>LXD_Solicitud de contraseña CAS</fullName>
                <label>Solicitud de contraseña CAS</label>
            </value>
            <value>
                <fullName>LXD_Cierre</fullName>
                <label>Cierre</label>
            </value>
            <value>
                <fullName>LXD_Solicitud de información</fullName>
                <label>Solicitud de información</label>
            </value>
            <value>
                <fullName>LXD_Validar Folio de Confirmación</fullName>
                <label>Validar Folio de Confirmación</label>
            </value>
            <value>
                <fullName>LXD_Validar Mensaje de Error</fullName>
                <label>Validar Mensaje de Error</label>
            </value>
            <value>
                <fullName>LXD_Verificar permisos de envío de solicitud</fullName>
                <label>Verificar permisos de envío de solicitud</label>
            </value>
            <value>
                <fullName>LXD_Precios de Programación, PPV, Canales a la Carta o Temporadas</fullName>
                <label>Precios de Programación, PPV, Canales a la Carta o Temporadas</label>
            </value>
            <value>
                <fullName>LXD_Precios y Políticas de contratación</fullName>
                <label>Precios y Políticas de contratación</label>
            </value>
            <value>
                <fullName>LXD_Promociones</fullName>
                <label>Promociones</label>
            </value>
            <value>
                <fullName>LXD_Tipos de cuenta o Bandera</fullName>
                <label>Tipos de cuenta o Bandera</label>
            </value>
            <value>
                <fullName>LXD_Asentamiento</fullName>
                <label>Asentamiento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>