force-app/main/default/objects/Activity/fields/LXD_Tiempo_de_interaccion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tiempo_de_interaccion__c</fullName>
    <formula>IF(
  CompletedDateTime - CreatedDate &gt; 0 ,
  TEXT( FLOOR( CompletedDateTime - CreatedDate ) ) &amp; &quot; días &quot;
  &amp; TEXT( FLOOR( MOD( (CompletedDateTime - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; horas &quot;
  &amp; TEXT( ROUND( MOD( (CompletedDateTime - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutos&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de interacción</label>
    <type>Text</type>
</CustomField>