force-app/main/default/objects/Activity/fields/LXD_Tipo_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tipo_de_contacto__c</fullName>
    <description>Tipo de contacto</description>
    <inlineHelpText>Tipo de contacto</inlineHelpText>
    <label>Tipo de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>